rnsc/test_data/rns_integration/error/parser/type_hints/fieldref/no_operands.rns
.class   @fieldref ; no operand provided
.super java/lang/Object
